Archive2/b0/919a6bed04e278/output
main.cpp: In function 'int main()':
main.cpp:7:42: error: too many initializers for 'std::__array_traits<int, 3ul>::_Type {aka int [3]}'
  std::array<int, 3> pole{ { 1, 2, 2, 3 } };
                                          ^
